--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <title>CraftyJS Practice</title>
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-        <script type="text/javascript" src="js/crafty.js"></script>
+        <script type="text/javascript" src="js/crafty.modified.js"></script>
         <script type="text/javascript" src="js/tron.js"></script>
         <script type="text/javascript">
             $(function () {
                 var game = Tron.instance("game-canvas");
-                Tron.startWhenLoaded(game);
+                Tron.enterScene('LandingPage', game);
             });
         </script>
         
